html and image set up moving on to styling

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
                 <a href="#" class="nav-item">Contact</a>
             </div>
         </div>
+
+        <div class="content-container">
+            <div class="content">
+                <h2>Title Design</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione fugit suscipit deserunt numquam exercitationem accusantium facilis repellat est illo. Nulla.</p>
+                <button>Explore</button>
+            </div>
+            <div class="img-container">
+              <img src="./lostonline.svg" alt="hero image">  
+            </div>
+        </div>
     </div>
 </body>
 </html>
