--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glass Site</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="glass-view">
@@ -24,7 +26,7 @@
                 <button>Explore</button>
             </div>
             <div class="img-container">
-              <img src="./lostonline.svg" alt="hero image">  
+              <img src="./virtualreality.svg" alt="hero image">  
             </div>
         </div>
     </div>
